--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="http://images.mentalfloss.com/sites/default/files/styles/mf_image_3x2/public/monster_primary.png?resize=300%2C200" alt="Sloth">
 		<div class="information">
 			<!-- your favorite animal's interesting fact goes here -->
-			<p><em>	Contrary to their reputation, sloths only sleep about 10 hours a day.</></em></p>
+			<p><em>	Contrary to their reputation, sloths only sleep about 10 hours a day. </em></p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
 				<li><span><strong>Scientific name</strong></span>: Bradypus variegatus</li>
